samples/_failures_safe/1761396625_f8529b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5b00652.c: In function ‘parser_accept’:
./samples/SAFE/__tmp_f5b00652.c:147:5: error: expected identifier at end of input
  147 |     if (context == NULL || context->
      |     ^~
./samples/SAFE/__tmp_f5b00652.c:147:5: error: expected declaration or statement at end of input
